Cleaned up my code and fixed the word wrapping issue.

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,10 @@
   background-color: #eee;
 }
 
+.todo-item {
+  word-wrap: break-word;
+}
+
 .app-main {
   width: 300px;
   margin-left: auto;
